--- a/src/app/addproduct/addproduct.component.html
+++ b/src/app/addproduct/addproduct.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
-<form class="addproduct">
+<form class="addproduct" #addproduct="ngForm" (ngSubmit)="addproducts()">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Product ID</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <input type="text" class="form-control"  name="id"   [(ngModel)]="products.id" id="exampleInputEmail1" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Product Name</label>
-      <input type="text" class="form-control" id="exampleInputPassword1">
+      <input type="text" class="form-control" name="productName"   [(ngModel)]="products.productName" id="exampleInputPassword1">
     </div>
     <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Product Quantity</label>
-        <input type="number" class="form-control" id="exampleInputPassword1">
+        <input type="number" class="form-control" name="productQuantity"   [(ngModel)]="products.productQuantity" id="exampleInputPassword1">
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Product Price</label>
-        <input type="number" class="form-control" id="exampleInputPassword1">
+        <input type="number" class="form-control" name="productPrice"   [(ngModel)]="products.productPrice" id="exampleInputPassword1">
       </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
